--- a/main.html
+++ b/main.html
@@ -10,6 +10,19 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<ol type="1">
+		<li data-ns-test="shoppingList">car</li>
+		<li data-ns-test="shoppingList">iphone</li>
+		<li data-ns-test="shoppingList">house</li>
+		
+	</ol>
+	<div>
+		<ul>
+			<li data-ns-test="holidayList">goa</li>
+			<li data-ns-test="holidayList">ladhak</li>
+			<li data-ns-test="holidayList">ooty</li>
+		</ul>
+	</div>
 
 </body>
 
